Worked on Javascript

--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <div class="choose">
         <h2>CHOOSE</h2>
     </div>
-    <div id="img" value="mickey">  
-        <img id="im1" src="./images/rock.gif">
-        <img id="im2" src="./images/paper.gif">
-        <img id="im3" src="./images/scissor.gif">
-        <button onclick="myFuncytion()">o</button>
+    <div id="img">  
+        <img id="im1" name="rock" src="./images/rock.gif">
+        <img id="im2" name="paper" src="./images/paper.gif">
+        <img id="im3" name="scissor" src="./images/scissor.gif">
     </div>
     <div class="choose">
         <h2>THE COMPUTER CHOOSES</h2>
