Solved assigning values to HTML for single match

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <h2>THE COMPUTER CHOOSES</h2>
     </div>
     <div id="cpu">
-
+        <p>Nothing here at the moment...Click the picture to begin.</p>
     </div>
     <div id="score">
-        <p>SCORE</p>
+        <p>RESULT</p>
     </div>
     <div id="final">
-
+        <p id="fin">¯\_(ツ)_/¯</p>
     </div>
     <script src="./rps.js"></script>
 </body>
